# agent-eval

./: .env  .gitignore  DEMO.md  DEPLOYMENT.md  EVALUATION.md  README.md  pyproject.toml  run_eval.py  run_local_app.py
agent-eval-framework/: README.md  config.yaml.template  otel_config.py  pyproject.toml  run_evaluation.py
agent-eval-framework/config/: adk_eval_config.yaml  eval_config.yaml
agent-eval-framework/data/: simple.test.jsonl
agent-eval-framework/data/vertex_eval_data/: golden_record.jsonl
agent-eval-framework/src/agent_eval_framework/: adapters.py  otel_config.py  runner.py
agent-eval-framework/src/agent_eval_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-eval-framework/src/agent_eval_framework/adapters/: adk_adapter.py  base.py  personalized_shopping_adapter.py
agent-eval-framework/src/agent_eval_framework/utils/: logger.py
agent-eval-framework/tests/: conftest.py  test_runner.py  test_runner_vertex.py
deployment/: .gitignore  deploy.py
eval/: adapters.py  config.yaml  test_config.json  test_main_eval.py  test_vertex_eval.py
eval/eval_data/: simple.test.jsonl
eval/vertex_eval_data/: golden_record.jsonl
personalized_shopping/: __init__.py  agent.py  agent_adapter.py  local_agent_adapter.py  prompt.py
personalized_shopping/shared_libraries/: __init__.py  init_env.py
personalized_shopping/shared_libraries/search_engine/: convert_product_file_format.py  run_indexing.sh
personalized_shopping/shared_libraries/web_agent_site/: __init__.py  utils.py
personalized_shopping/shared_libraries/web_agent_site/engine/: engine.py  goal.py
personalized_shopping/shared_libraries/web_agent_site/envs/: web_agent_text_env.py
personalized_shopping/tools/: click.py  search.py
src/agent_eval_framework/: runner.py
src/agent_eval_framework/adapters/: base.py  personalized_shopping_adapter.py
src/agent_eval_framework/utils/: class_loader.py  communication.py  gcs_utils.py  logger.py  logging_utils.py  metric_utils.py  otel_config.py
tests/: conftest.py  dummy_adapter.py  test_runner.py  test_runner_vertex.py  test_tools.py
well_structured_system/: main.py  run_app_demo.py  run_evaluation_demo.py
well_structured_system/src/: logger.py
well_structured_system/src/app/: __init__.py  cache.py  main_logic.py  tools.py
well_structured_system/src/evaluation/: __init__.py  adapters.py  metrics.py  pipeline.py
