[tool.poetry]
name = "agent-eval-framework"
version = "0.1.0"
description = "A framework for evaluating agents"
authors = ["laah laah@google.com"] # Update with your details if you wish
license = "PRIVATE"
readme = "README.md"
packages = [{include = "agent_eval_framework", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11" # Match the python version in the root pyproject.toml
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
google-cloud-aiplatform = { extras = ["evaluation"], version = ">=1.111.0" }
google-cloud-storage = "^2.18.0"
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
